syntax = "proto3";

package protos;

import "google/protobuf/timestamp.proto";

message Order {
    int64 id = 1;
    string tx_invoice = 2;
    double tx_amount = 3;
    int64 tx_status = 4;
    OrderDetail order_detail = 5;
}

message OrderDetail {
    int64 id = 1;
    int64 order_id = 2;
    int64 vendor_id = 3;
    int64 product_id = 4;
    string order_detail_name = 5;
    google.protobuf.Timestamp created_time = 6;
    google.protobuf.Timestamp updated_time = 7;
}

message GetOrderRequest {
    int64 order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
    OrderDetail order_detail = 2;
}

message CreateOrderRequest {
    string tx_invoice = 1;
    double tx_amount = 2;
    int64 tx_status = 3;
    OrderDetailRequest order_detail = 4;
}

message CreateOrderResponse {}

message UpdateOrderStatusRequest {
    int64 order_id = 1;
    int64 tx_status = 2;
}

message UpdateOrderStatusResponse {}

message OrderDetailRequest {
    int64 vendor_id = 1;
    int64 product_id = 2;
}

